Add slant styling

--- a/third.html
+++ b/third.html
@@ -7,7 +7,7 @@
     </head>
     <body>
         <div class="overlay">
-            <div class="line">Third</div>
+            <div class="line"><span>Name here</span></div>
         </div>
         <script src="script.js"></script>
     </body>
