--- a/third.html
+++ b/third.html
@@ -8,6 +8,7 @@
     <body>
         <div class="overlay">
             <div class="line"><span>Name here</span></div>
+            <!--div class="sub-line">Fourth</div-->
         </div>
         <script src="script.js"></script>
     </body>
